--- a/app/sass/components/overlay/_overlay.scss
+++ b/app/sass/components/overlay/_overlay.scss
@@ -17,6 +17,7 @@
         top: 50%;
         width: 60vw;
         transform: translate(-50%, -50%);
+        box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
         img {
             width: 100%;
         }
