--- a/app/sass/components/main-menu/_main-menu.scss
+++ b/app/sass/components/main-menu/_main-menu.scss
@@ -13,7 +13,8 @@
                 margin-left: 0;
             }
             &.selected,
-            &:hover {
+            &:hover,
+            &:focus {
                 cursor: pointer;
                 &:after {
                     content: "";
